--- a/astro/src/components/sections/Visit.astro
+++ b/astro/src/components/sections/Visit.astro
@@ -24,7 +24,7 @@ const defaultText = {
         class="w-full lg:w-3/5 reveal border-l-[3px] border-primary/20 pl-6 md:pl-16"
       >
         <h3
-          class="text-4xl md:text-6xl font-heading font-extrabold text-branding-dark mb-10 tracking-tighter"
+          class="text-4xl md:text-6xl font-heading font-extrabold text-branding-dark mb-10 tracking-tight"
         >
           {t(data?.title || defaultTitle, locale)}
         </h3>
