--- a/astro/src/components/sections/Visit.astro
+++ b/astro/src/components/sections/Visit.astro
@@ -29,7 +29,7 @@ const defaultText = {
           {t(data?.title || defaultTitle, locale)}
         </h3>
         <p
-          class="text-branding-muted text-lg md:text-xl font-light leading-relaxed max-w-2xl mb-12"
+          class="text-branding-muted text-lg md:text-2xl font-light leading-relaxed max-w-2xl mb-12"
         >
           {t(data?.text || defaultText, locale)}
         </p>
