--- a/astro/src/components/Header.astro
+++ b/astro/src/components/Header.astro
@@ -23,7 +23,7 @@ const currentPath = Astro.url.pathname;
 const isStaticHeader = currentPath
   .split("/")
   .some((segment) =>
-    ["history", "galerie", "datenschutz", "impressum"].includes(segment),
+    ["history", "galerie", "datenschutz", "impressum", "news"].includes(segment),
   );
 
 const navLabels: Record<string, any> = {
@@ -31,6 +31,7 @@ const navLabels: Record<string, any> = {
   "#programme": settings?.labels?.navPrograms,
   "#team": settings?.labels?.navTeam,
   "#spenden": settings?.labels?.navDonate,
+  "/news": settings?.labels?.navNews,
   "/history": settings?.labels?.navHistory,
   "/galerie": settings?.labels?.navGallery,
 };
@@ -127,7 +128,7 @@ const navLabels: Record<string, any> = {
         {
           navItems.map((item) => (
             <>
-              {(item.href === "/history" || item.href === "/galerie") && (
+              {(item.href === "/news" || item.href === "/galerie") && (
                 <div class="nav-separator w-[1px] h-3 bg-transparent self-center transition-colors duration-500 mx-[-1rem] xl:mx-[-1.25rem]" />
               )}
               <a
