--- a/astro/src/components/Header.astro
+++ b/astro/src/components/Header.astro
@@ -128,7 +128,7 @@ const navLabels: Record<string, any> = {
         {
           navItems.map((item) => (
             <>
-              {(item.href === "/news" || item.href === "/galerie") && (
+              {(item.href === "/news" || item.href === "/history" || item.href === "/galerie") && (
                 <div class="nav-separator w-[1px] h-3 bg-transparent self-center transition-colors duration-500 mx-[-1rem] xl:mx-[-1.25rem]" />
               )}
               <a
